fix for apple styling on submit button on iphone

--- a/src/components/ContactForm/style.css
+++ b/src/components/ContactForm/style.css
@@ -23,6 +23,7 @@ form label {
     font-size: 1rem;
 }
 #submitButton {
+    -webkit-appearance: none;
     align-self: center;
     background-color: #FC354C;
     color: #f8f7f7;
